//
//  AccessibilityIdentifiers.swift
//  TestingPyramid
//
//  Created by Hassaan El-Garem on 11/9/20.
//

import Foundation

class AccessibilityIdentifiers {
    
    // MARK:- Login Page
    
    static let kLoginWelcomeLabelIdentifier = "kLoginWelcomeLabelIdentifier"
    static let kLoginEmailTextFieldIdentifier = "kLoginEmailTextFieldIdentifier"
    static let kLoginPasswordTextFieldIdentifier = "kLoginPasswordTextFieldIdentifier"
    static let kLoginButtonIdentifier = "kLoginButtonIdentifier"
    
    // MARK:- Statistics Page
    
    static let kStatisticsTitleLabelIdentifier = "kStatisticsTitleLabelIdentifier"
    static let kSuccessfulCountLabelIdentifier = "kSuccessfulCountLabelIdentifier"
    static let kFailedCountLabelIdentifier = "kFailedCountLabelIdentifier"
}
