...
    case tooLongPassword
    case noSpecialCharacters
    
    var message: String {
        switch self {
        case .emptyEmail:
            return "Email can not be empty"
        case .invalidEmail:
            return "Please enter a valid email"
        case .tooLongEmail:
            return "Email can not be more than 100 characters"
        case .emptyPassword:
            return "Password can not be empty"
...
